移除金币掉落特效

--- a/activity/488/client-entrance.html
+++ b/activity/488/client-entrance.html
@@ -73,7 +73,7 @@
   </div>
   <script src="js/zepto.min.js"></script>
   <script src="js/dialog.min.js"></script>
-  <script src="http://cache.500boss.com/mobile/widget/leave/LeaveUtil.js"></script>
+  <!-- <script src="http://cache.500boss.com/mobile/widget/leave/LeaveUtil.js"></script>
   <script>
   (function() {
     var focus = new LeaveUtil("leaveContainer", {
@@ -86,7 +86,7 @@
       autoTime: "10s"
     });
   })();
-  </script>
+  </script> -->
 </body>
 
 </html>
