--- a/activity/488/client.html
+++ b/activity/488/client.html
@@ -72,7 +72,7 @@
   </div>
   <script src="js/zepto.min.js"></script>
   <script src="js/dialog.min.js"></script>
-  <script src="http://cache.500boss.com/mobile/widget/leave/LeaveUtil.js"></script>
+  <!-- <script src="http://cache.500boss.com/mobile/widget/leave/LeaveUtil.js"></script> -->
   <script>
   function is_weixin(){
     var ua = navigator.userAgent.toLowerCase();
@@ -82,20 +82,20 @@
       return false;
     }
   }
-  (function() {
-    if (is_weixin()){
-      $('body').addClass('ua-weixin');
-    }
-    var focus = new LeaveUtil("leaveContainer", {
-      flakeCount: 4,
-      options: "image/money.png",
-      minSize: 10, //图片最小宽度minSize,maxSize自定义
-      maxSize: 25, //图片最大宽度
-      autoPlay: true, //是否自动播放autoPlay:true自动播放,autoPlay:false不自动播放
-      iCount: "infinite", //动画循环次数，iCount: n|infinite;
-      autoTime: "10s"
-    });
-  })();
+  // (function() {
+  //   if (is_weixin()){
+  //     $('body').addClass('ua-weixin');
+  //   }
+  //   var focus = new LeaveUtil("leaveContainer", {
+  //     flakeCount: 4,
+  //     options: "image/money.png",
+  //     minSize: 10, //图片最小宽度minSize,maxSize自定义
+  //     maxSize: 25, //图片最大宽度
+  //     autoPlay: true, //是否自动播放autoPlay:true自动播放,autoPlay:false不自动播放
+  //     iCount: "infinite", //动画循环次数，iCount: n|infinite;
+  //     autoTime: "10s"
+  //   });
+  // })();
   (function(){
     //解决办法
     var user_agent = navigator.userAgent.toLowerCase(); // detect the user agent
