--- a/activity/488/index.html
+++ b/activity/488/index.html
@@ -70,7 +70,7 @@
     <!-- footer end -->
   </div>
   <script src="js/zepto.min.js"></script>
-  <script src="http://cache.500boss.com/mobile/widget/leave/LeaveUtil.js"></script>
+  <!-- <script src="http://cache.500boss.com/mobile/widget/leave/LeaveUtil.js"></script>
   <script>
   (function() {
     var focus = new LeaveUtil("leaveContainer", {
@@ -83,7 +83,7 @@
       autoTime: "10s"
     });
   })()
-  </script>
+  </script> -->
 </body>
 
 </html>
